src/test/ui/macros/macro-use-wrong-name.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/macro-use-wrong-name.rs:7:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^ If I were you, I would simply a macro with a similar name exists: `macro_one`

error: aborting due to previous error

